manifests/prod/headlong/EndpointSlice-headlong.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.74.91.37
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: headlong
  name: headlong
  namespace: headlong
ports:
  - name: http
    port: 8081
    protocol: TCP
