manifests/prod/headlong/Service-headlong.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlong
  namespace: headlong
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
